--- a/src/main/resources/templates/phonecall.html
+++ b/src/main/resources/templates/phonecall.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>Phonecall Form</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
@@ -20,6 +20,7 @@
 
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
+
     </body>
 
 </html>
