Introduce concept of looping

--- a/src/main/resources/templates/phonecall.html
+++ b/src/main/resources/templates/phonecall.html
@@ -7,6 +7,8 @@
 
     <body>
 
+        <p th:text="${loopCounterValue}" />
+
         <form action="/phonecall" method="post" class="form-inline">
             <div class="form-group">
                 <label for="number">My number</label>
